// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`boxl childWrap auto 1`] = `
<div
  className="sc-hSdWYo gspjvf"
  data-name="Boxl"
>
  <div
    className="sc-eHgmQL etONgX"
    data-name="BoxlChild"
  >
    <div>
      1
    </div>
  </div>
  <div
    className="sc-eHgmQL etONgX"
    data-name="BoxlChild"
  >
    <div>
      2
    </div>
  </div>
</div>
`;

exports[`boxl childWrap even 1`] = `
<div
  className="sc-jWBwVP hSnqKR"
  data-name="Boxl"
>
  <div
    className="sc-brqgnP lalXKE"
    data-name="BoxlChild"
  >
    <div>
      1
    </div>
  </div>
  <div
    className="sc-brqgnP lalXKE"
    data-name="BoxlChild"
  >
    <div>
      2
    </div>
  </div>
  <div
    className="sc-brqgnP bTMaFV"
    data-name="BoxlChild"
  />
  <div
    className="sc-brqgnP bTMaFV"
    data-name="BoxlChild"
  />
</div>
`;

exports[`boxl direction default 1`] = `
<div
  className="sc-kpOJdX XDdGi"
  data-name="Boxl"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
</div>
`;

exports[`boxl direction horizontal 1`] = `
<div
  className="sc-kEYyzF cuRErh"
  data-name="Boxl"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
</div>
`;

exports[`boxl direction vertical 1`] = `
<div
  className="sc-jKJlTe UVtnd"
  data-name="Boxl"
>
  <div>
    1
  </div>
  <div>
    2
  </div>
</div>
`;

exports[`boxl edge-cases handles null child in children array 1`] = `
<div
  className="sc-chPdSV jVJePX"
  data-name="Boxl"
/>
`;

exports[`boxl structure Renders correct structure when no spacing 1`] = `
<div
  className="sc-bwzfXH kYBqNO"
  data-name="Boxl"
>
  Text
</div>
`;

exports[`boxl structure Renders correct structure when spacing AND children length > 1 1`] = `
<div
  className="sc-bZQynM kFWAzK"
  data-name="Boxl"
>
  <div
    className="sc-gzVnrw eAAogD"
    data-name="BoxlChildren"
  >
    <div
      className="sc-htoDjs hLIqUR"
      data-name="BoxlChild"
    >
      <div>
        Text 1
      </div>
    </div>
    <div
      className="sc-htoDjs hLIqUR"
      data-name="BoxlChild"
    >
      <div>
        Text 2
      </div>
    </div>
  </div>
</div>
`;

exports[`boxl structure Renders correct structure when spacing AND children length > 1 and children are Boxl 1`] = `
<div
  className="sc-dnqmqq iVcNbk"
  data-name="Boxl"
>
  <div
    className="sc-iwsKbI btvzbN"
    data-name="BoxlChildren"
  >
    <div
      className="sc-gZMcBi bLxssF"
      data-name="BoxlChild"
    >
      <div
        className="sc-VigVT hwEDRc"
        data-name="Boxl"
      >
        Text 1
      </div>
    </div>
    <div
      className="sc-gZMcBi bLxssF"
      data-name="BoxlChild"
    >
      <div
        className="sc-jzJRlG cmABAR"
        data-name="Boxl"
      >
        Text 2
      </div>
    </div>
  </div>
</div>
`;

exports[`boxl structure Renders correct structure when spacing BUT children length === 1 1`] = `
<div
  className="sc-ifAKCX eqlbLu"
  data-name="Boxl"
>
  Text
</div>
`;

exports[`boxlThemed can call returned boxl 1`] = `
<div
  className="sc-jAaTju jJelOU"
  data-name="Boxl"
/>
`;

exports[`rerender maintains element instance between renders 1`] = `
<input
  class="sc-csuQGl dpahvW"
  data-name="Boxl"
  placeholder="test1"
  value="My password is PASSWORD"
/>
`;

exports[`rerender maintains element instance between renders 2`] = `
<input
  class="sc-hzDkRC coWNud"
  data-name="Boxl"
  placeholder="test2"
  value="My password is PASSWORD"
/>
`;
